change branch repository on github

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.flaviotroia</groupId>
+    <groupId>com.github.stasbranger</groupId>
     <artifactId>java-magento-client</artifactId>
     <version>1.0.18</version>
 
@@ -13,35 +13,35 @@
     <licenses>
         <license>
             <name>MIT</name>
-            <url>https://github.com/flaviotroia/java-magento-client/blob/master/LICENSE</url>
+            <url>https://github.com/stasbranger/java-magento-client/blob/master/LICENSE</url>
             <comments>MIT License</comments>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <email>info@flaviotroia.com</email>
-            <id>flaviotroia</id>
+            <email>info@stasbranger.com</email>
+            <id>stasbranger</id>
             <name>Flavio Troia</name>
-            <url>https://github.com/flaviotroia</url>
+            <url>https://github.com/stasbranger</url>
         </developer>
     </developers>
 
     <scm>
-        <url>https://github.com/flaviotroia/java-magento-client</url>
-        <connection>scm:git:git://github.com/flaviotroia/java-magento-client.git</connection>
-        <developerConnection>scm:git:git@github.com:flaviotroia/java-magento-client.git</developerConnection>
+        <url>https://github.com/stasbranger/java-magento-client</url>
+        <connection>scm:git:git://github.com/stasbranger/java-magento-client.git</connection>
+        <developerConnection>scm:git:git@github.com:stasbranger/java-magento-client.git</developerConnection>
     </scm>
 
     <issueManagement>
-        <url>https://github.com/flaviotroia/java-magento-client/issues</url>
+        <url>https://github.com/stasbranger/java-magento-client/issues</url>
         <system>GitHub Issues</system>
     </issueManagement>
 
 
     <name>Java Client to Magento Site</name>
     <description>Java client that communicate with magento site in Java</description>
-    <url>https://github.com/flaviotroia/java-magento-client</url>
+    <url>https://github.com/stasbranger/java-magento-client</url>
 
     <distributionManagement>
         <snapshotRepository>
