Added OAuth1 authentication with oauth1-signature-builder library (https://github.com/giordamauro/oauth1-signature-builder)

--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/oauth1-signature-builder-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
