--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
     </distributionManagement>
 
     <repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+		
         <repository>
             <id>central</id>
             <name>Central Repository</name>
